Fix auth state sync and service booking flow